--- a/SocialMedia/src/main/resources/application.properties
+++ b/SocialMedia/src/main/resources/application.properties
@@ -12,3 +12,7 @@ spring.datasource.username=postgres
 spring.datasource.password=12345
 # suppress inspection "UnusedProperty"
 spring.jpa.properties.javax.persistence.validation.mode = none
+# suppress inspection "UnusedProperty"
+socialmedia.app.secret=socialmedia
+# suppress inspection "UnusedProperty"
+socialmedia.expires.in=604800
