--- a/SocialMedia/src/main/resources/application.properties
+++ b/SocialMedia/src/main/resources/application.properties
@@ -15,4 +15,6 @@ spring.jpa.properties.javax.persistence.validation.mode = none
 # suppress inspection "UnusedProperty"
 socialmedia.app.secret=socialmedia
 # suppress inspection "UnusedProperty"
-socialmedia.expires.in=604800
+socialmedia.expires.in=360000
+# suppress inspection "UnusedProperty"
+refresh.token.expires.in=604800
